updated the README with my contact info and some ascii art ;D

--- a/README
+++ b/README
@@ -1,13 +1,24 @@
-
-XBD (Extended browser detection)
+  ____  __________________   
+  \   \/  /_____   \_____ \  
+   \     / |   |  _/|   |  \ 
+   /     \ |   |   \|   `   \
+  /___/\  \|_____  /______  /
+        \_/      \/       \/ 
+XBD (extended browser detection)
 ================================
 
-Library to implement browser specific features on web applications or websites. 
+library to implement browser specific features on web applications or websites. 
 
-Version 1.2 (July 25, 2011)
------------
+version 1.402 (march 20, 2012)
+
+   .%.       .%.       .%.       .%.       .%.       .%.       .%.       .%.
+ .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%"
+------"%.--------"%.-------"%.-------"%.-------"%.-------"%.------"%.-------
+%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'
+         "         "         "         "         "         "         "
 
 Copyright (C) 2009 Guillermo Azurdia <info_at_nopticon.com>
+Forked    (F) 2012 xero harrison <x_at_xero.nu>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -22,24 +33,46 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
------------
+forked by xero harrison for use in the open qoob framework.
+by forked i mean: wrapped into a class, added android detection
+and ip / hostname lookup.
 
-Requirements:
+
+   .%.       .%.       .%.       .%.       .%.       .%.       .%.       .%.
+ .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%"
+--[ requirements ]--"%.-------"%.-------"%.-------"%.-------"%.-------"%.----
+%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'
+         "         "         "         "         "         "         "
+
+requirements:
     PHP 5.0 or later
     
-    Maybe can work in PHP 3 & 4, but not tested yet.
+    might work in PHP 3 & 4, but untested.
 
-Download:
-    You can get the newest version at https://github.com/nopticon/xbd/
+download:
+    get the newest version of the official at https://github.com/nopticon/xbd/
+    get xero's fork at https://github.com/fontvirus/xbd
 
-Contact:
-    Bugs, feature requests, support and general comments, email to:
-    
-    info _a_ nopticon _dot_ com
-    
+contact nopticon:
+    bugs, feature requests, support and general comments, email to:
+    info _a_ nopticon _dot_ com    
     Twitter: http://www.twitter.com/psychopsia
-    
     Website: http://www.nopticon.com/
  
+contact xero:
+    email:   x_at_xero.nu
+    twitter: http://twitter.com/fontvirus
+    web: http://xero.nu 
+         http://qoob.nu
+         http://fontvir.us
+         http://hexarray.nu
+         http://xero.owns.us
 
-Enjoy!
+enjoy!
+
+
+   .%.       .%.       .%.       .%.       .%.       .%.       .%.       .%.
+ .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%" "%.   .%"  
+--[ xero ]------"%.-------"%.-------[ owns ]--"%.-------"%.-------[ us ]---- 
+%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     `%.%'     
+         "         "         "         "         "         "         "       
